--- a/src/stylesheets/_config.scss
+++ b/src/stylesheets/_config.scss
@@ -1,28 +1,27 @@
 .dark-mode{
-    background: hsl(207, 26%, 17%);
-    color:hsl(0, 0%, 100%);
-    nav{
+    background-color: hsl(207, 26%, 17%);
+    height: 100vh;
+
+    nav, button, input, .card, .description, .Dropdown-control, .Dropdown-menu, .Dropdown-option, a{
     background:hsl(209, 23%, 22%);
+    color:hsl(0, 0%, 100%);
+    border: none;
     }
-    button{
-        background:hsl(209, 23%, 22%);
+    .card-list, .detail, .detail-page{
+        background-color: hsl(207, 26%, 17%);
         color:hsl(0, 0%, 100%);
     }
-    input{
-        background:hsl(209, 23%, 22%);
-        color:hsl(0, 0%, 100%);
-    }
-    .Dropdown-root{
-        color:hsl(0, 0%, 100%);
-    }
-    .card{
-        background-color:hsl(209, 23%, 22%);
-        color:hsl(0, 0%, 100%);
-    }
+
+    
 }
 .light-mode{
+    height: 100vh;
     background:hsl(0, 0%, 98%);
     color:hsl(200, 15%, 8%);
+    .card-list{
+        background:hsl(0, 0%, 98%);
+        color:hsl(0, 0%, 100%);
+    }
     nav{
         background:hsl(0, 0%, 100%);
     }
@@ -39,6 +38,10 @@
     }
     .card{
         background:hsl(0, 0%, 100%);
+        color:hsl(200, 15%, 8%)
+    }
+    .description{
+        text-decoration: none;
         color:hsl(200, 15%, 8%)
     }
 }
