--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -33,6 +33,7 @@ body{
 
 
 .card{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
   text-decoration: none;
   overflow: hidden;
   .description{
@@ -56,10 +57,12 @@ img{
 
 
 .nav-bar{
+  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
   position: sticky;
   padding: 20px;
   display: flex;
   flex-direction: row;
+
   justify-content: space-between;
   
   i{
@@ -80,6 +83,8 @@ and (max-width: 1366px){
     justify-content: space-between;
   }
   .search{
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 5px 6px 0 rgba(0, 0, 0, 0.19);
+
     display: block;
     width: 100%;
     padding: 15px;
@@ -92,6 +97,7 @@ and (max-width: 1366px){
   }
 }
 .Dropdown-root{
+
   width: 50%;
   @media only screen and (min-width: 1030px){
     width: 20%;
@@ -135,10 +141,16 @@ a{
     margin: 0;
   }
   a{
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 5px 6px 0 rgba(0, 0, 0, 0.19);
+
     height: 50px;
     width: 130px;
     display: flex;
     justify-content: center;
+    button{
+      height: 100%;
+      width: 100%;
+    }
     @media only screen and (min-width: 1030px){
       margin: 20px 30px;
       height: 50px;
@@ -167,6 +179,7 @@ a{
     }
 
     img{
+      box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 5px 6px 0 rgba(0, 0, 0, 0.19);
       height: 200px;
       @media only screen and (min-width: 1030px){
         width: 45%;
