buttons working, added responsiveness

--- a/src/stylesheets/_config.scss
+++ b/src/stylesheets/_config.scss
@@ -8,7 +8,7 @@
     border: none;
     }
     .card-list, .detail, .detail-page{
-        background-color: hsl(207, 26%, 17%);
+        background-color: hsl(207, 26%, 17%)!important;
         color:hsl(0, 0%, 100%);
     }
 
