--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -1,4 +1,5 @@
 @import "config";
+@import "animations";
 
 *{
     margin: 0;
@@ -138,6 +139,7 @@ a{
 
   @media only screen and (min-width: 768px){
     margin-top: 20px;
+    padding: 0px 30px;
   }
   
   @media only screen and (min-width: 1030px){
@@ -189,8 +191,8 @@ a{
       box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 5px 6px 0 rgba(0, 0, 0, 0.19);
       height: 30%;
       @media only screen and (min-width: 1030px){
-        width: 45%;
-        height: 30%;
+        width: 40%;
+        height: 15%;
       }
     }
 
@@ -259,6 +261,7 @@ a{
           margin-top: 0;
           display: flex;
           flex-direction: row;
+          align-items: center;
           justify-content: space-between;
           
         }
@@ -271,20 +274,26 @@ a{
           @media only screen and (min-width: 1030px){
           font-size: 22px;}
         }
+        .no-border{
+          @media only screen and (min-width: 1030px){
+          margin-left: 30px;
+          }
+        }
         &_buttons{
+          
         margin-top: 8px;
         display: flex;
         flex-wrap: wrap;
         overflow: hidden;
+        
         @media only screen and (min-width: 768px){
           margin-top: 10px;
         }
         @media only screen and (min-width: 1030px){
           margin-top: 0px;
-          justify-content: space-around;
         }
         a{
-          height: 40px;
+          height: 30px;
           width: 90px;
           margin-bottom: 5px;
           margin-left: 5px;
@@ -294,10 +303,20 @@ a{
             width: 120px;
           }
           @media only screen and (min-width: 1030px){
-          margin: 3px 10px;}
+            height: 30px;
+            width: 60px;
+          margin: 6px 10px;
+          padding: 3px;
+        
+        button{
+          font-size: 12px;
+        }}
         
       }}
     }
     }
   }
 }
+
+
+  
